<resources>
    <string name="multiautocompletetextview">MultiAutoCompleteTextView</string>
    <string name="mnc_logo">mnc_logo</string>
    <string name="title_activity_mnc_trip_map">mnc_trip_map</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="mnc_userid">Enter User ID</string>
    <string name="mnc_userfname">First Name</string>
    <string name="mnc_userlname">Last Name</string>
    <string name="mnc_userpwd">Password</string>
    <string name="mnc_confirmpwd">Confirm Password</string>
    <string name="mnc_createuser">CREATE ACCOUNT</string>
    <string name="settings">Settings</string>
    <string name="Done">Done</string>
    <string name="ca_message1">Account Creation Successful</string>
    <string name="fragment_userid">Fragment userid</string>
    <!-- Strings related to login -->

    <string name="Trip_plan_menu">Plan a Trip</string>
    <string name="add_ev">Add Your EV</string>
    <string name="ChargeHist">Charge History</string>
    <string name="trip_hist">Trip History</string>
    <string name="mnclogout">Logout</string>
    <string name="chargeStProf">Charge Station Profile</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_mnc_home_view">mncHomeView</string>
    <!-- Strings used for fragments for navigation -->
    <string name="title_activity_login_mnc">loginMNC</string>

    <string name="app_name">MyNextCharge</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_mnc_login">MncLoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_account">Create Account</string>
    <string name="title_activity_next_charge_home">nextChargeHome</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="breakfast_notification_channel_id" />
    <string name="message_subscribed" />
    <string name="message_subscribe_failed" />


    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>

    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>

    <string name="label_passwordless">Passwordless Authentication</string>
    <string name="desc_passwordless">Use only an email to authenticate with Firebase.</string>

    <string name="label_phone_auth">Phone Number Authentication</string>
    <string name="desc_phone_auth">Use a phone number to authenticate with Firebase.</string>

    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>

    <string name="label_anonymous_sign_in">Anonymous Sign In</string>
    <string name="label_account_linking">Account Linking</string>
    <string name="btn_link_account">Link Account</string>


    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>

    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>

    <string name="label_generic_idp">Generic OAuth</string>
    <string name="desc_generic_idp">Use a generic OAuth identity provider, like Apple, Microsoft, Yahoo, or Twitter to authenticate with Firebase.</string>

    <string name="label_multi_factor">Multi-Factor Authentication</string>
    <string name="desc_multi_factor">Use SMS for two-factor authentication. Note: this feature is only available for Cloud Identity Platform.</string>
    <string name="desc_firebase_lockup" />
    <string name="emailpassword_title_text" />
    <string name="signed_out">Signed Out</string>
    <string name="hint_email">Add email id</string>
    <string name="hint_password">password hint</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">"Very Email ID "</string>
    <string name="reload">Reload....</string>
    <string name="auth_failed" />
    <string name="emailpassword_status_fmt" />
    <string name="firebase_status_fmt" />
    <string name="title_activity_next_charge_home_page">NextChargeHomePageActivity</string>
    <string name="button_send">Send</string>
    <string name="edit_message" />
</resources>