<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserAccFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ca_app_logo"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_gravity="center|center_horizontal|center_vertical"
            android:adjustViewBounds="false"
            android:contentDescription="@string/mnc_logo"
            android:cropToPadding="true"
            android:visibility="visible"
            tools:srcCompat="@mipmap/mnc_logo_foreground"
            tools:visibility="visible" />

        <EditText
            android:id="@+id/acc_userid"
            android:layout_width="260dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:hint="@string/mnc_userid"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColorHint="#757575"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <EditText
            android:id="@+id/acc_fname"
            android:layout_width="260dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:hint="@string/mnc_userfname"
            android:importantForAutofill="no"
            android:inputType="textPersonName|text"
            android:textColorHint="#757575" />

        <EditText
            android:id="@+id/acc_lname"
            android:layout_width="260dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:hint="@string/mnc_userlname"
            android:inputType="textPersonName|text"
            android:textColorHint="#757575" />

        <EditText
            android:id="@+id/acc_pwd"
            android:layout_width="260dp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:hint="@string/mnc_userpwd"
            android:inputType="textPassword"
            android:textColorHint="#757575" />

        <EditText
            android:id="@+id/acc_confirmpwd"
            android:layout_width="260dp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:gravity="top"
            android:hint="@string/mnc_confirmpwd"
            android:inputType="textPassword"
            android:textColorHint="#757575"
            android:visibility="visible"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/caMessage"
            android:layout_width="260dp"
            android:layout_height="48dp"
            android:layout_margin="16dp"
            android:textAlignment="center"
            android:textColor="#CF3737"
            android:textStyle="bold"
            android:visibility="visible"
            tools:text="Not Applicable" />

        <Button
            android:id="@+id/acc_createBtn"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:text="@string/create_account"
            android:textAlignment="center"
            android:textStyle="bold"
            tools:ignore="OnClick" />
    </LinearLayout>

</FrameLayout>