<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mncHomeFrag"
    android:layout_width="250dp"
    android:layout_height="350dp"
    android:layout_marginTop="180dp"
    tools:context=".mncMenuFrag">

    <!-- TODO: Update blank fragment layout -->

    <Button
        android:id="@+id/PlanTrip1"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="169dp"
        android:layout_height="48dp"
        android:layout_gravity="fill"
        android:layout_marginStart="4dp"
        android:layout_marginTop="30dp"
        android:background="#BF5454"
        android:gravity="center_vertical"
        android:text="@string/Trip_plan_menu"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="16sp"
        android:typeface="sans"
        android:visibility="visible"
        tools:visibility="visible" />

    <Button
        android:id="@+id/ChargeStProf1"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="175dp"
        android:layout_height="48dp"
        android:layout_gravity="fill"
        android:layout_marginTop="75dp"
        android:gravity="center_vertical"
        android:text="@string/chargeStProf"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textSize="11sp"
        android:typeface="sans"
        android:visibility="visible"
        tools:visibility="visible" />

    <Button
        android:id="@+id/AddEV1"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="175dp"
        android:layout_height="48dp"
        android:layout_marginTop="115dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/add_ev"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="sans" />

    <Button
        android:id="@+id/ChargeHis1"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="175dp"
        android:layout_height="48dp"
        android:layout_marginTop="155dp"
        android:text="@string/ChargeHist"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textSize="11sp"
        android:typeface="sans" />

    <Button
        android:id="@+id/tripHis1"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="175dp"
        android:layout_height="48dp"
        android:layout_marginTop="200dp"
        android:text="@string/trip_hist"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textSize="11sp"
        android:typeface="sans" />

    <Button
        android:id="@+id/Logout1"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="175dp"
        android:layout_height="48dp"
        android:layout_marginTop="300dp"
        android:text="@string/mnclogout"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textSize="11sp"
        android:typeface="sans" />

</FrameLayout>