<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.mnc.nextcharge.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_emailLoginFragment2"
            app:destination="@id/emailLoginFragment2" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.mnc.nextcharge.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.mnc.nextcharge.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/emailLoginFragment2"
        android:name="com.mnc.nextcharge.EmailLoginFragment"
        android:label="fragment_mnc_login"
        tools:layout="@layout/fragment_mnc_login" >
        <action
            android:id="@+id/action_emailLoginFragment2_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>
</navigation>