<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_100"
    android:orientation="vertical"
    android:weightSum="4"
    tools:context=".EmailLoginFragment">

    <ProgressBar
        android:id="@+id/progressBar"
        android:indeterminate="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        style="?android:attr/progressBarStyleHorizontal"/>

    <LinearLayout
        android:layout_width="410dp"
        android:layout_height="250dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/icon"
            style="@style/ThemeOverlay.FirebaseIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FCE4EC"
            android:contentDescription="@string/desc_firebase_lockup"
            tools:srcCompat="@mipmap/mnc_logo_foreground" />

        <TextView
            android:id="@+id/titleText"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/title_bottom_margin"
            android:text="@string/emailpassword_title_text"
            android:theme="@style/ThemeOverlay.MyTitleText" />

        <TextView
            android:id="@+id/status"
            style="@style/ThemeOverlay.MyTextDetail"
            android:text="@string/signed_out" />

        <TextView
            android:id="@+id/detail"
            style="@style/ThemeOverlay.MyTextDetail"
            tools:text="Firebase User ID: 123456789abc" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="410dp"
        android:layout_height="288dp"
        android:layout_marginTop="50dp"
        android:background="@color/grey_300"
        android:gravity="center_vertical"
        android:paddingTop="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userEmail"
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:layout_marginTop="4dp"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userPassword"
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:outlineProvider="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userEmail" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/emailPasswordFields"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:constraint_referenced_ids="userEmail, userPassword"
            tools:layout_editor_absoluteY="16dp" />

        <Button
            android:id="@+id/emailSignInButton"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/sign_in"
            android:theme="@style/ThemeOverlay.MyDarkButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userPassword" />

        <Button
            android:id="@+id/emailCreateAccountButton"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/create_account"
            android:theme="@style/ThemeOverlay.MyDarkButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailSignInButton" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/emailPasswordButtons"
            android:layout_width="118dp"
            android:layout_height="0dp"
            android:visibility="visible"
            app:constraint_referenced_ids="emailCreateAccountButton, emailSignInButton"
            tools:layout_editor_absoluteX="35dp"
            tools:layout_editor_absoluteY="111dp" />

        <Button
            android:id="@+id/signOutButton"
            android:layout_width="109dp"
            android:layout_height="38dp"
            android:layout_marginTop="200dp"
            android:text="@string/sign_out"
            android:theme="@style/ThemeOverlay.MyDarkButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias=".45"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userPassword" />

        <Button
            android:id="@+id/verifyEmailButton"
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:layout_marginTop="200dp"
            android:text="@string/verify_email"
            android:theme="@style/ThemeOverlay.MyDarkButton"
            app:layout_constraintBottom_toTopOf="@id/emailCreateAccountButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.45"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/emailPasswordFields"
            app:layout_constraintVertical_bias="0.5" />

        <Button
            android:id="@+id/reloadButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="272dp"
            android:text="@string/reload"
            android:theme="@style/ThemeOverlay.MyDarkButton"
            app:layout_constraintBottom_toBottomOf="@id/emailPasswordFields"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/emailCreateAccountButton" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/signedInButtons"
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:layout_marginStart="150dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="410dp"
            android:layout_marginBottom="272dp"
            android:visibility="gone"
            app:constraint_referenced_ids="signOutButton, verifyEmailButton, reloadButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>
